samples/_failures_safe/1761689451_9fab50_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ffbc4a44.c: In function ‘main’:
./samples/SAFE/__tmp_ffbc4a44.c:166:12: error: missing terminating " character
  166 |     printf("
      |            ^
./samples/SAFE/__tmp_ffbc4a44.c:166:5: error: expected expression at end of input
  166 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_ffbc4a44.c:166:5: error: expected declaration or statement at end of input
